--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-axios": "^2.1.4",
     "vue-i18n": "^8.11.2",
     "vue-router": "^3.0.3",
+    "vue2-editor": "^2.6.6",
     "vue2-google-maps": "^0.10.6",
     "vuex": "^3.0.1"
   },
@@ -24,7 +25,7 @@
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
     "@vue/eslint-config-airbnb": "^4.0.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.18.0",
